--- a/.gitignore
+++ b/.gitignore
@@ -44,18 +44,12 @@ applications/*
 !applications/examples/*
 !applications/admin
 !applications/admin/*
-applications/*/databases/*
-applications/*/sessions/*
-applications/*/errors/*
-applications/*/cache/*
-applications/*/uploads/*
-applications/*/private/*
-applications/*/*.py[oc]
-applications/*/static/temp
-applications/*/progress.log
-applications/examples/static/epydoc
-applications/examples/static/sphinx
-applications/admin/cron/cron.master
+databases/*
+sessions/*
+errors/*
+cache/*
+uploads/*
+private/*
 HOWTO-web2py-devel
 *.sublime-project
 *.sublime-workspace
